src/test/ui/parser/issue-19398.stderr
error: missing `fn`, `type`, or `const` for associated-item declaration
  --> $DIR/issue-19398.rs:1:10
   |
LL |   trait T {
   |  __________^
LL | |
LL | |     extern "Rust" unsafe fn foo();
   | |____^ missing `fn`, `type`, or `const`

error: aborting due to previous error

