src/test/ui/parser/issue-19398.rs
trait T {
    //~^ ERROR missing `fn`, `type`, or `const` for associated-item declaration
    extern "Rust" unsafe fn foo();
}

fn main() {}
